# wrlc-alma-api-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-publish.yml  publish-to-pypi.yml  run-tests.yml
src/alma_api_client/: __init__.py
tests/: test_exceptions.py
tests/api/: test_analytics_api.py  test_bib_api.py  test_holding_api.py  test_item_api.py
tests/models/: test_analytics_model.py  test_bib_model.py  test_holding_model.py  test_item_model.py  test_utils.py
wrlc_alma_api_client/: client.py
wrlc_alma_api_client/api/: analytics.py  bib.py  holding.py  item.py
wrlc_alma_api_client/models/: __init__.py  bib.py  holding.py  item.py
